add serial port and connection

--- a/res/settings/settings.json
+++ b/res/settings/settings.json
@@ -5,6 +5,7 @@
     "year" : 2021,
     "theme_name" : "default",
     "custom_title_bar": true,
+    "brand": "SRC",
     "startup_size": [
         1400,
         720
@@ -15,12 +16,12 @@
     ],
     "left_menu_size" : {
         "minimum" : 60,
-        "maximum" : 240
+        "maximum" : 200
     },
     "left_menu_content_margins" : 3,
     "left_column_size" : {
         "minimum" : 0,
-        "maximum" : 240
+        "maximum" : 200
     },
     "right_box_size" : {
         "minimum" : 0,
